--- a/assets/css/scss/index.scss
+++ b/assets/css/scss/index.scss
@@ -29,6 +29,7 @@
 @import "atoms/messages";
 @import "atoms/overlay";
 @import "atoms/password";
+@import "atoms/platform_logo";
 @import "atoms/progressbar";
 @import "atoms/radio";
 @import "atoms/skeleton";
