Remove reference to stylesheet setting - refs BT#21621

--- a/public/main/template/default/gradebook/custom_certificate.html.twig
+++ b/public/main/template/default/gradebook/custom_certificate.html.twig
@@ -5,11 +5,10 @@
     <title>{{ 'Certificate' | trans | raw }}</title>
 </head>
 <body>
-{% set stylesheet_name = chamilo_settings_get('stylesheets.stylesheets') %}
 <table border="0" cellpadding="0" cellspacing="0">
     <tr>
         <td colspan="3">
-            <img src="{{ theme_asset('images/cuadre.png') }}">
+            <img src="{{ theme_asset('images/cuadro.png') }}">
         </td>
     </tr>
     <tr>
