--- a/public/main/template/default/gradebook/custom_certificate.html.twig
+++ b/public/main/template/default/gradebook/custom_certificate.html.twig
@@ -8,12 +8,12 @@
 <table border="0" cellpadding="0" cellspacing="0">
     <tr>
         <td colspan="3">
-            <img src="{{ theme_asset_base64('images/cuadro.png') }}">
+            <img src="{{ theme_asset_base64('images/square.png') }}">
         </td>
     </tr>
     <tr>
         <td>
-            <img src="{{ theme_asset_base64('images/cuadro.png') }}">
+            <img src="{{ theme_asset_base64('images/square.png') }}">
         </td>
         <td>
             <table border="0" bgcolor="#92c647" cellpadding="0" cellspacing="0" align="center" width="100%">
@@ -116,12 +116,12 @@
             </table>
         </td>
         <td>
-            <img src="{{ theme_asset_base64('images/cuadro.png') }}">
+            <img src="{{ theme_asset_base64('images/square.png') }}">
         </td>
     </tr>
     <tr>
         <td colspan="3">
-            <img src="{{ theme_asset_base64('images/cuadro.png') }}">
+            <img src="{{ theme_asset_base64('images/square.png') }}">
         </td>
     </tr>
 </table>
