Internal: Change color of table header

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -733,7 +733,7 @@ form .field {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: center;
-    background-color: #4CAF50;
+    background-color: #999;
     color: white;
   }
   td {
