--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -708,6 +708,54 @@ form .field {
   background-color: #dc3545;
 }
 
+.permissions-table {
+  width: 100%;
+  border-collapse: collapse;
+  th, td {
+    border: 1px solid #ccc;
+    padding: 8px;
+    text-align: center;
+  }
+  th {
+    background-color: #f9f9f9;
+  }
+  tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
+  tr:hover {
+    background-color: #e9e9e9;
+  }
+  th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+  th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: center;
+    background-color: #999;
+    color: white;
+  }
+  td {
+    padding: 12px;
+  }
+  input[type="checkbox"] {
+    transform: scale(1.2);
+  }
+  .save-button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    margin: 20px 0;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+  }
+  .save-button:hover {
+    background-color: #45a049;
+  }
+}
+
 //@import 'primevue-md-light-indigo/theme.css';
 //@import '~primevue/resources/primevue.min.css';
 //@import '~primeflex/primeflex.css';
