Internal: Fix FIB question answer alignment issue - refs BT#21853

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -176,7 +176,7 @@
     background-color: #f7f7f7;
   }
 
-  .card span {
+  .card span.float-right {
     float: right;
     margin-right: 15px;
     font-size: 14px;
