--- a/assets/css/scss/index.scss
+++ b/assets/css/scss/index.scss
@@ -19,6 +19,7 @@
 @import "atoms/buttons";
 @import "atoms/calendar";
 @import "atoms/checkbox";
+@import "atoms/color_picker";
 @import "atoms/divider";
 @import "atoms/dropdown";
 @import "atoms/fieldset";
