Gradebook: Certificate: transform Chamilo LMS to a translation string to be able to adapt the certificate Footer in sublanguages - refs BT#21621

--- a/public/main/template/default/gradebook/custom_certificate.html.twig
+++ b/public/main/template/default/gradebook/custom_certificate.html.twig
@@ -104,7 +104,7 @@
                                 </td>
                                 <td bgcolor="#92c647" width=500 height=91
                                     style="border-collapse: collapse; padding: 0; font-family:CourierSans-Light; line-height: 18px; color:#FFF;">
-                                    {{ 'Chamilo LMS' }}
+                                    {{ 'Chamilo LMS'|trans|raw }}
                                 </td>
                                 <td bgcolor="#92c647" width="245" height="91"
                                     style="border-collapse: collapse; padding: 0;">
