Gradebook: Certificate: remove specific term that should not be in the default template - refs BT#21621

--- a/public/main/template/default/gradebook/custom_certificate.html.twig
+++ b/public/main/template/default/gradebook/custom_certificate.html.twig
@@ -80,7 +80,7 @@
                                     {% endif %}
                                     <br />
                                     <p style="color:#40ad49; font-size: 16px;">
-                                        Berlin/Paris, {{ 'The'|trans }}
+                                        {{ 'The'|trans }}
                                         <span style="font-weight: bold; color: #672290;">{{ certificate_generated_date_no_time }}</span>
                                         <br />
                                         {{ 'The platform team'|trans|raw }}
