Display: fix utility class not defined

--- a/assets/css/scss/_exercise.scss
+++ b/assets/css/scss/_exercise.scss
@@ -295,7 +295,7 @@
 }
 
 .feedback-red {
-  @apply text-danger line-through;
+  @apply text-error line-through;
 }
 
 .question-list-description-block {
