--- a/assets/css/scss/organisms/_section_header.scss
+++ b/assets/css/scss/organisms/_section_header.scss
@@ -3,11 +3,14 @@
     md:flex-row sm:items-center;
 
   &--h2 {
-    @apply pb-6 ;
+    @apply pb-6 mb-6;
   }
 
+  &--h3,
+  &--h4,
+  &--h5,
   &--h6 {
-    @apply pb-4;
+    @apply pb-4 mb-4;
   }
 
   &__title {
