--- a/assets/css/scss/_admin_index.scss
+++ b/assets/css/scss/_admin_index.scss
@@ -13,30 +13,18 @@
 
 .admin-colors {
   &__container {
-    @apply flex flex-col mt-6;
+    @apply flex flex-col md:flex-row mt-6;
   }
 
-  &__settings {
-    @apply flex flex-col gap-4
-      md:flex-row;
+  &__form {
+    @apply w-full md:w-3/5;
+  }
 
-    &-form {
-      @apply flex-1;
+  &__form-fields {
+    @apply mt-4;
+  }
 
-      &-title {
-        @apply mb-4;
-      }
-    }
-
-    .row-group {
-      @apply flex flex-col gap-4 items-start
-        sm:grid sm:grid-cols-2
-        md:items-end
-        xl:grid-cols-3;
-    }
-
-    &-preview {
-      @apply space-y-4 flex-1;
-    }
+  &__preview {
+    @apply flex w-full md:w-2/5;
   }
 }
