Admin: Fix setting admin_chamilo_announcements_disable called in template

--- a/public/main/template/default/admin/index.html.twig
+++ b/public/main/template/default/admin/index.html.twig
@@ -1,4 +1,4 @@
-{% set admin_chamilo_announcements_disable = 'announcement.admin_chamilo_announcements_disable'|api_get_setting == 'true' %}
+{% set admin_chamilo_announcements_disable = 'admin.admin_chamilo_announcements_disable'|api_get_setting == 'true' %}
 
 {% block content %}
     {% autoescape false %}
