--- a/assets/css/scss/_documents.scss
+++ b/assets/css/scss/_documents.scss
@@ -32,3 +32,59 @@
     }
   }
 }
+
+.filemanager-container .mdi-icon {
+  @apply text-6xl;
+}
+
+.filemanager-container .thumbnails-container {
+  @apply flex justify-center;
+}
+
+.filemanager-container .thumbnails {
+  @apply flex flex-wrap gap-2.5 justify-center mb-12;
+}
+
+.filemanager-container .thumbnail-item {
+  @apply w-36 p-2 border border-gray-25 rounded-md text-center cursor-pointer;
+}
+
+.filemanager-container .thumbnail-item:hover {
+  @apply bg-gray-15;
+}
+
+.filemanager-container .thumbnail-icon {
+  @apply text-2xl w-24 h-24 object-cover flex items-center justify-center mx-auto;
+}
+
+.filemanager-container .thumbnail-title {
+  @apply mt-2 text-base break-words;
+}
+
+.filemanager-container .thumbnail-actions {
+  @apply mt-2 flex justify-center gap-1;
+}
+
+.filemanager-container .thumbnail-image {
+  @apply w-24 h-24 object-cover;
+}
+
+.context-menu {
+  @apply absolute bg-white shadow-lg z-50 rounded-md py-1 min-w-[150px] font-sans text-[14px];
+}
+
+.context-menu ul {
+  @apply list-none m-0 p-0;
+}
+
+.context-menu li {
+  @apply flex items-center px-4 py-2 cursor-pointer text-center transition duration-200 ease-in-out;
+}
+
+.context-menu li:hover {
+  @apply bg-gray-15 shadow-inner;
+}
+
+.context-menu li .mdi {
+  @apply mr-2;
+}
