Internal: Add CSS reset for TinyMCE editor content - refs BT#21876

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -9,6 +9,7 @@
 //@import '~jquery-ui/themes/base/all.css';
 
 @import "tinymce/skins/ui/oxide/skin.css";
+@import './editor_content.css';
 
 @layer utilities {
   .border-gray-300 {
